--- a/frontend/src/components/Features/Features.module.css
+++ b/frontend/src/components/Features/Features.module.css
@@ -38,3 +38,27 @@
     font-size: 1.5rem;
     margin-bottom: 10px;
 }
+
+@media (max-width: 1023px) {
+    .feature {
+        max-width: 100%;
+        align-items: center;
+    }
+
+    .title {
+        text-align: center;
+        margin: 60px auto;
+    }
+}
+
+@media (max-width: 767px) {
+    .grid {
+        padding: 0;
+    }
+}
+
+@media (max-width: 374px) {
+    .feature {
+        max-width: 280px;
+    }
+}
